[doc] Update release notes (#5154)